--- a/API/Admin/Pages/BillDetails/AddBillDetail.razor
+++ b/API/Admin/Pages/BillDetails/AddBillDetail.razor
@@ -1,5 +1,6 @@
 ﻿@page "/createbilldetails"
 @using System.Text
+@using Admin.Model
 <h3>Thêm Hóa Đơn Chi Tiết</h3>
 
 <EditForm Model="proData" OnValidSubmit="HandleValidSubmit" OnInvalidSubmit="HandleInvalidSubmit" FormName="CreateBillDetails">
