--- a/API/WebTraSua/Pages/User/Users.razor
+++ b/API/WebTraSua/Pages/User/Users.razor
@@ -1,118 +1,121 @@
 ﻿@page "/user"
+@using System.Text
 @inject IJSRuntime jsRuntime
 @inject HttpClient HttpClient
+@inject NavigationManager NV
 
-<main class="container mt-6">
+<main class="container mt-10">
     <div class="row">
         @if (IsLoggedIn)
         {
-            @foreach (var user in US)
-            {
-                if (user.UserId == UserId)
-                {
-                    <div class="col-md-8">
-                        <div class="mb-72">
-                            <p class="fs-52 fw-bold">Thông tin của bạn</p>
-                            <form action="" class="col-md-10 mx-auto">
-                                <label for="" class="fw-semibold">Tên người dùng</label>
-                                <div class="input-group flex-nowrap mt-3">
-                                    <span class="input-group-text" id="addon-wrapping">
-                                        <i class="fa-solid fa-address-card"></i>
-                                    </span>
-                                    <input type="text" class="form-control" value="@user.Name" aria-describedby="addon-wrapping">
-                                </div>
-                                <label for="" class="mt-3 fw-semibold">Tên đăng nhập</label>
-                                <div class="input-group flex-nowrap mt-3">
-                                    <span class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-user"></i></span>
-                                    <input type="text" class="form-control" value="@user.UserName" aria-describedby="addon-wrapping">
-                                </div>
-                                <label for="" class="mt-3 fw-semibold">Mật khẩu</label>
-                                <div class="input-group flex-nowrap mt-3">
-                                    <span class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-user"></i></span>
-                                    <input type="text" class="form-control" value="@user.PassWord" aria-describedby="addon-wrapping">
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <label for="" class="mt-3 fw-semibold">Gender</label>
-                                        <select class="form-select mt-3" aria-label="Default select example">
-                                            <option value="0" selected="@user.Gender == 0">Nam</option>
-                                            <option value="1" selected="@user.Gender == 1">Nữ</option>
-                                        </select>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <label for="" class="mt-3 fw-semibold">Phone</label>
-                                        <div class="input-group flex-nowrap mt-3">
-                                            <span class="input-group-text" id="addon-wrapping">
-                                                <i class="fa-solid fa-phone"></i>
-                                            </span>
-                                            <input type="text" class="form-control" value="@user.Phone" aria-describedby="addon-wrapping">
-                                        </div>
-                                    </div>
-                                </div>
-                                <label for="" class="mt-3 fw-semibold">Address</label>
-                                <div class="input-group mt-3">
-                                    <span class="input-group-text"><i class="fa-solid fa-address-book"></i></span>
-                                    <textarea class="form-control" aria-label="With textarea">@user.Address</textarea>
-                                </div>
-
-                                <a class="btn text-white button-brown-hover fs-16 fw-bold bg-B88E2F rounded-0 mt-3">
-                                    Lưu thay đổi
-                                </a>
-                            </form>
-                        </div>
-                    </div>
-
-
-                    <div class="col-md-4">
-                        <div class="col-md-10 mx-auto" style="margin-top: 92px;">
-                            <div class="col-md-10 mx-auto" style="margin-top: 92px;">
-                                <img src="https://i.pinimg.com/originals/cf/ba/b9/cfbab918bff4c8f23ab2cf2948233238.jpg"
-                                     alt="" class="img-fluid w-100 h-100 rounded-circle">
-                                <p class="text-center mt-3 fs-16 fw-semibold">@user.Name</p>
+            <div class="col-md-8">
+                <div class="mb-72">
+                    <p class="fs-52 fw-bold">Thông tin của bạn</p>
+                    <EditForm Model="@user" OnValidSubmit="HandleValidSubmit" OnInvalidSubmit="HandleInvalidSubmit">
+                        <DataAnnotationsValidator />
+                        <ValidationSummary />
+                        <div class="col-md-10 mx-auto">
+                            <div class="form-group">
+                                <label class="fw-semibold">Tên người dùng</label>
+                                <InputText class="form-control" @bind-Value="user.Name" />
+                                <ValidationMessage For="@(() => user.Name)" />
                             </div>
+                            <div class="form-group mt-3">
+                                <label class="fw-semibold">Tên đăng nhập</label>
+                                <InputText class="form-control" @bind-Value="user.UserName" />
+                                <ValidationMessage For="@(() => user.UserName)" />
+                            </div>
+                            <div class="form-group mt-3">
+                                <label class="fw-semibold">Mật khẩu</label>
+                                <InputText class="form-control" @bind-Value="user.PassWord" />
+                                <ValidationMessage For="@(() => user.PassWord)" />
+                            </div>
+                            <div class="form-group mt-3">
+                                <label class="fw-semibold">Email</label>
+                                <InputText class="form-control" @bind-Value="user.Email" />
+                                <ValidationMessage For="@(() => user.Email)" />
+                            </div>
+                            <div class="row mt-3">
+                                <div class="col-md-6">
+                                    <label class="fw-semibold">Gender</label>
+                                    <InputSelect class="form-select" @bind-Value="user.Gender">
+                                        <option value="0">Nam</option>
+                                        <option value="1">Nữ</option>
+                                    </InputSelect>
+                                    <ValidationMessage For="@(() => user.Gender)" />
+                                </div>
+                                <div class="col-md-6">
+                                    <label class="fw-semibold">Phone</label>
+                                    <InputText class="form-control" @bind-Value="user.Phone" />
+                                    <ValidationMessage For="@(() => user.Phone)" />
+                                </div>
+                            </div>
+                            <div class="form-group mt-3">
+                                <label class="fw-semibold">Address</label>
+                                <InputTextArea class="form-control" @bind-Value="user.Address" />
+                                <ValidationMessage For="@(() => user.Address)" />
+                            </div>
+
+                            <button type="submit" class="btn btn-primary text-white button-brown-hover fs-16 fw-bold bg-B88E2F rounded-0 mt-3">
+                                Lưu thay đổi
+                            </button>
                         </div>
-                    </div>
-                }
-            }
+                    </EditForm>
+                    <p class="text-success p-2 ms-auto">@FormSubmitMessage</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="col-md-10 mx-auto" style="margin-top: 92px;">
+                    <img src="https://i.pinimg.com/originals/cf/ba/b9/cfbab918bff4c8f23ab2cf2948233238.jpg"
+                         alt="" class="img-fluid w-100 h-100 rounded-circle">
+                    <p class="text-center mt-3 fs-16 fw-semibold">@user.Name</p>
+                </div>
+            </div>
+
         }
         else
         {
-            <p>Bạn chưa đăng nhập.</p>
+            <p>Bạn đã cập nhật thông tin thành công , hãy quay lại trang thông tin để kiểm tra</p>
         }
     </div>
+
 </main>
 
+
 @code {
-    [Inject]
-    public NavigationManager NV { get; set; }
     private bool IsLoggedIn = false;
     private int UserId = 0;
+    private User user = new User();
+    public string FormSubmitMessage { get; set; } = string.Empty;
 
     string url = "http://localhost:20714/api/Users";
-
-    public IEnumerable<User> US { get; set; } = Enumerable.Empty<User>();
 
     protected async override Task OnInitializedAsync()
     {
         await GetSession();
         if (IsLoggedIn)
         {
-            await CallAPI();
-        }
-    }
-
-    async Task CallAPI()
-    {
-        var response = await HttpClient.GetAsync(url);
-        if (response.IsSuccessStatusCode)
-        {
-            string apiResponse = await response.Content.ReadAsStringAsync();
-            US = JsonConvert.DeserializeObject<List<User>>(apiResponse);
-            Console.WriteLine("API Response: " + apiResponse);
+            await GetUserData();
         }
         else
         {
-            Console.WriteLine("Error retrieving data from API: " + response.StatusCode);
+            NV.NavigateTo("/login", true);
+        }
+    }
+
+    private async Task GetUserData()
+    {
+        using (var response = await HttpClient.GetAsync($"{url}/{UserId}"))
+        {
+            if (response.IsSuccessStatusCode)
+            {
+                string apiResponse = await response.Content.ReadAsStringAsync();
+                user = JsonConvert.DeserializeObject<User>(apiResponse);
+            }
+            else
+            {
+                Console.WriteLine("Error retrieving user data from API: " + response.StatusCode);
+            }
         }
     }
 
@@ -137,5 +140,35 @@
         {
             Console.WriteLine("No user session found.");
         }
+    }
+
+
+    private async Task HandleValidSubmit()
+    {
+        var jsonContent = new StringContent(JsonConvert.SerializeObject(user), Encoding.UTF8, "application/json");
+        using (var response = await HttpClient.PutAsync($"{url}/{user.UserId}", jsonContent))
+        {
+            if (response.IsSuccessStatusCode)
+            {
+                string apiResponse = await response.Content.ReadAsStringAsync();
+                user = JsonConvert.DeserializeObject<User>(apiResponse);
+                await jsRuntime.InvokeVoidAsync("localStorage.setItem", "userSession", JsonConvert.SerializeObject(user));
+                FormSubmitMessage = "Cập nhật thông tin thành công!";
+            }
+            else
+            {
+                FormSubmitMessage = "Cập nhật thất bại: " + await response.Content.ReadAsStringAsync();
+            }
+        }
+        StateHasChanged();
+        await ClearFormSubmitMessage();
+    }
+
+    private void HandleInvalidSubmit() => FormSubmitMessage = "Dữ liệu không hợp lệ, vui lòng kiểm tra lại.";
+    private async Task ClearFormSubmitMessage()
+    {
+        await Task.Delay(5000); // Đợi 5 giây
+        FormSubmitMessage = string.Empty;
+        StateHasChanged();
     }
 }
