[Admin-User] Edit_user với thêm nút chuyển trang ở nav

--- a/API/WebTraSua/Shared/MainLayout.razor
+++ b/API/WebTraSua/Shared/MainLayout.razor
@@ -63,6 +63,9 @@
                                 <li>
                                     <a class="dropdown-item" href="#" @onclick="Logout">Đăng xuất</a>
                                 </li>
+                                <li>
+                                    <a class="dropdown-item" href="/user" >Thông tin</a>
+                                </li>
                             }
                             else
                             {
