--- a/API/Admin/Shared/NavMenu.razor
+++ b/API/Admin/Shared/NavMenu.razor
@@ -32,11 +32,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Sản Phẩm
             </NavLink>
         </li> 
-        <li class="nav-item px-3">
+       @*  <li class="nav-item px-3">
             <NavLink class="nav-link" href="/getimg">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Ảnh Sản Phẩm
             </NavLink>
-        </li>
+        </li> *@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/bill">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Hóa Đơn
