--- a/API/WebTraSua/Pages/Blogs/Blogs.razor
+++ b/API/WebTraSua/Pages/Blogs/Blogs.razor
@@ -1,5 +1,26 @@
 ﻿@page "/blog"
 
+<style>
+    /* giới hạn dòng và dấu .. */
+    .ellipsis {
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+    }
+
+    .block-ellipsis {
+        display: block;
+        display: -webkit-box;
+        max-width: 100%;
+        margin: 0 auto;
+        line-height: 1.7;
+        -webkit-line-clamp: 6;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+</style>
 <main class="container" style="margin-top: 106px;">
     <div class="row">
         @foreach (Blog blogs in blog)
@@ -16,10 +37,10 @@
                         <i class="fa-solid fa-tag"></i> Trà sữa
                     </div>
                 </div>
-                <p class="fw-medium mt-3" style="font-size: 30px; word-wrap: break-word; word-break: break-all;">
+                <p class="fw-medium mt-3 block-ellipsis" style="font-size: 30px; word-wrap: break-word; word-break: break-all;">
                     @blogs.Title
                 </p>
-                <p class="color-9F9F9F mt-3 text-break">
+                <p class="color-9F9F9F mt-3 text-break block-ellipsis">
                     @blogs.Decription
                 </p>
                 <a class="color-9F9F9F" @onclick="() => NavigateToBlogDetail(blogs.Id)">Xem chi tiết</a>
